Fix more order list spacing issues

--- a/src/assets/styles/pages/Dashboard.scss
+++ b/src/assets/styles/pages/Dashboard.scss
@@ -174,7 +174,7 @@
             .dashboard-order {
                 border: 1px solid $borderclr1;
                 display: grid;
-                grid-template-columns: 1fr auto auto auto auto;
+                grid-template-columns: 1fr 0.6fr 0.8fr 0.8fr 0.4fr;
                 padding: 1rem 1.5rem;
                 margin-bottom: 1rem;
                 min-height: 6rem;
